crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__ara-conversation.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "ara"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "ara"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "mother",
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": "Khaled",
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "ara"
        ],
        "role": "Mother",
        "sex": "female",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;10.",
        "corpus": "corpus",
        "language": [
          "ara"
        ],
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Kuwaiti Arabic mother-child interaction",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: Arabic language coverage, Arabic script",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "Qay",
                  "pos": "x"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "Qay",
              "content": [
                {
                  "content": "Qay",
                  "type": "text"
                }
              ],
              "raw_text": "Qay",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "this",
                  "pos": "x"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "this",
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "Qay",
                  "pos": "x"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "Qay",
              "content": [
                {
                  "content": "Qay",
                  "type": "text"
                }
              ],
              "raw_text": "Qay",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "dada",
                  "pos": "x"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "dada",
              "content": [
                {
                  "content": "dada",
                  "type": "text"
                }
              ],
              "raw_text": "dada",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;10.",
        "corpus": "corpus",
        "language": [
          "ara"
        ],
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI"
      },
      "name": "Khaled",
      "role": "Target_Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "ara"
        ],
        "role": "Mother",
        "sex": "female",
        "speaker": "MOT"
      },
      "name": "mother",
      "role": "Mother"
    }
  }
}
