crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__clitics-and-compounds.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "4;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "%mor tier with clitics (tilde-separated: pos|stem~pos|stem)",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "and hyphen-separated UD features; main-tier words have no compound join markers",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: mor_post_clitic, mor_feature",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "it",
                  "pos": "pron"
                },
                "post_clitics": [
                  {
                    "features": [
                      "Pres",
                      "S3"
                    ],
                    "lemma": "be",
                    "pos": "aux"
                  }
                ]
              },
              {
                "main": {
                  "lemma": "a",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "lemma": "cookie",
                  "pos": "noun"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 4,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "AUX"
              },
              {
                "head": 4,
                "index": 3,
                "relation": "DET"
              },
              {
                "head": 0,
                "index": 4,
                "relation": "ROOT"
              },
              {
                "head": 4,
                "index": 5,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "it's",
              "content": [
                {
                  "content": "it's",
                  "type": "text"
                }
              ],
              "raw_text": "it's",
              "type": "word"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "cookie",
              "content": [
                {
                  "content": "cookie",
                  "type": "text"
                }
              ],
              "raw_text": "cookie",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "he",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "lemma": "can",
                  "pos": "mod"
                },
                "post_clitics": [
                  {
                    "lemma": "not",
                    "pos": "neg"
                  }
                ]
              },
              {
                "main": {
                  "lemma": "do",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "lemma": "it",
                  "pos": "pron"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 4,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 4,
                "index": 2,
                "relation": "AUX"
              },
              {
                "head": 2,
                "index": 3,
                "relation": "ADVMOD-NEG"
              },
              {
                "head": 0,
                "index": 4,
                "relation": "ROOT"
              },
              {
                "head": 4,
                "index": 5,
                "relation": "OBJ"
              },
              {
                "head": 4,
                "index": 6,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "he",
              "content": [
                {
                  "content": "he",
                  "type": "text"
                }
              ],
              "raw_text": "he",
              "type": "word"
            },
            {
              "cleaned_text": "cannot",
              "content": [
                {
                  "content": "cannot",
                  "type": "text"
                }
              ],
              "raw_text": "cannot",
              "type": "word"
            },
            {
              "cleaned_text": "do",
              "content": [
                {
                  "content": "do",
                  "type": "text"
                }
              ],
              "raw_text": "do",
              "type": "word"
            },
            {
              "cleaned_text": "it",
              "content": [
                {
                  "content": "it",
                  "type": "text"
                }
              ],
              "raw_text": "it",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "the",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "lemma": "teacup",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Past"
                  ],
                  "lemma": "break",
                  "pos": "verb"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 2,
                "index": 1,
                "relation": "DET"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "NSUBJ"
              },
              {
                "head": 0,
                "index": 3,
                "relation": "ROOT"
              },
              {
                "head": 3,
                "index": 4,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "teacup",
              "content": [
                {
                  "content": "teacup",
                  "type": "text"
                }
              ],
              "raw_text": "teacup",
              "type": "word"
            },
            {
              "cleaned_text": "broke",
              "content": [
                {
                  "content": "broke",
                  "type": "text"
                }
              ],
              "raw_text": "broke",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "there",
                  "pos": "pron"
                },
                "post_clitics": [
                  {
                    "features": [
                      "Pres",
                      "S3"
                    ],
                    "lemma": "be",
                    "pos": "verb"
                  }
                ]
              },
              {
                "main": {
                  "lemma": "a",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "lemma": "butterfly",
                  "pos": "noun"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 2,
                "index": 1,
                "relation": "EXPL"
              },
              {
                "head": 0,
                "index": 2,
                "relation": "ROOT"
              },
              {
                "head": 4,
                "index": 3,
                "relation": "DET"
              },
              {
                "head": 2,
                "index": 4,
                "relation": "NSUBJ"
              },
              {
                "head": 2,
                "index": 5,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "there's",
              "content": [
                {
                  "content": "there's",
                  "type": "text"
                }
              ],
              "raw_text": "there's",
              "type": "word"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "butterfly",
              "content": [
                {
                  "content": "butterfly",
                  "type": "text"
                }
              ],
              "raw_text": "butterfly",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "4;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
